RoutePath length calc: showing missing stop gaps (#1749)

--- a/src/components/sidebar/routePathView/routePathInfoTab/unmeasuredStopGapsConfirm.scss
+++ b/src/components/sidebar/routePathView/routePathInfoTab/unmeasuredStopGapsConfirm.scss
@@ -8,7 +8,7 @@
         padding-bottom: 0px;
     }
 
-    .unmeasuredStopGapsHeader {
+    .header {
         padding-top: 20px;
     }
 }
